--- a/a2.md
+++ b/a2.md
@@ -1,20 +1,32 @@
-% CIVIS
-% CB, SN, JK
-% 2021
+---
+date: 2021-01-01
+title: Seminar Session
+subtitle: Common Ground despite Controversy Creating a Digital Network
+author: CB SN JK
+output:
+  xaringan::moon_reader:
+    css: ["tamu"]
+    nature:
+      highlightLines: true
+      countdown: 1
+knit: (function(inputFile, encoding) {
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+  })
+---
 
-# Slide 1 title
+background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
 
-Some super quickly created demo slides
+## Outline
 
-* Do not need anything else than markdown
-    * Slides title starts with # (also starts a new slide)
-    * Bullet points, newlines, empty lines: all standard markdown
+.footnote[unsplash.com/photos/qmnpqDwla_E]
 
-* However, can also use other stuff, e.g.:
+---
 
-    * Some HTML (e.g. \<center\>)
-    * When using pandoc beamer, can use latex commands (e.g. \\center, \\large, etc)\dots
+## References
 
-# Slide 2 title
+* reference
 
-\center The slide syntax i
+???
+
+presenter comment
+
