a1 and b1 in part

--- a/b1.md
+++ b/b1.md
@@ -1,6 +1,6 @@
 ---
-date: 2021-01-01
-title: Seminar Session
+date: 2021-07-25
+title: B1 Design and Implementation I
 subtitle: Common Ground despite Controversy Creating a Digital Network
 author: CB SN JK
 output:
@@ -14,17 +14,180 @@ knit: (function(inputFile, encoding) {
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
+# Welcome back!
 
-## Outline
+---
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+### What are we going to do?
+
+### Day 2
+
+B1 Design and Implementation I
+
+B2 A common set of rules?
+
+B3 Design and Implementation II
+
+B4 Wrapping up - Next Steps
+
+--
+
+### Recap
+
+A1 Communication and society as a System?
+
+A2 (Our) Perspectives on the pandemic - with Anna Wanka (Goethe University Frankfurt)
+
+A3 Obstacles and rhetoric foundations in communication
+
+A4 Transfer: How to build a digital network (fast)
+
+---
+
+## This Session
+
+### Reflecting Design Features of Digital Media and the Internet
+
+* (Commercial) Internet Platforms
+
+* Digital Communication
+
+* Additional Findings from Empirical Research
+
+### Kicking Off Our Design Process
+
+abc
+
+---
+
+## (Commercial) Internet Platforms
+
+* Engagement Time Optimization
+
+--
+
+<br>
+
+* Adaptive Content
+
+--
+
+<br>
+
+* Specific to Social Platforms: The 1% rule, most users are lurkers (Van Mierlo, 2014)
+
+---
+
+## Digital Communication in Networks
+
+* Asynchronicity and Hyperpersonalization
+	* Hyperpersonal model of communication and effects on social anxiety 
+	(High & Caplan, 2009)
+
+--
+
+* Media Richness and Social Cooperation
+	* Group cooperation tasks across media types (Bos et al., 2002)
+
+--
+
+* Frictionless Navigation of Social Conflict and Disagreement
+	* User filtration and polarization (John & Dvir-Gvirsman)
+	* Alternative standpoints on polarization:
+		* Filter bubbles (Pariser, 2011)
+		* Cognition (e.g. confirmation bias) in combination
+		with social *and* technological filtering (Geschke, Lorenz, and Holtz, 2019)
+	
+---
+
+## Additional Findings from Empirical Research
+
+* Elaboration likelihood model (Petty & Cacioppo, 1986)
+	* There are prerequisites to elaboration
+
+--
+
+* Confirmation bias (Nickerson, 1998)
+	* Weighing evidence is not easy 
+
+--
+
+* Illusory Truth Effect (Fazio et al., 2015)
+	* False claims can displace what we know
+
+---
+
+## Additional Findings from Empirical Research
+
+* Prominence-Interpretation Theory (Fogg, 2003):
+	* A close investigation of the source does not come naturally
+--
+
+<br>
+
+* Fake news spread more effeciently (Vosoughi, Roy, and Aral, 2018)
+	* Potentially due to strong emotional reactions connected to the nature of false claims
+
+---
+
+## Questions and Group Reflection
+
+Questions to reflect:
+
+* How does information flow differently online than offline?
+
+* What are differences in the way people interact online and offline?
+
+* Which consequences arise?
+
+* How would we like to address these consequences?
+
+---
+
+## Design and Implementation
+
+abc
 
 ---
 
 ## References
 
-* reference
+Bos, N., Olson, J., Gergle, D., Olson, G., & Wright, Z. (2002, April). 
+Effects of four computer-mediated communications channels on trust development. 
+In Proceedings of the SIGCHI conference on human factors in computing systems (pp. 135-140).
+
+Fazio, L. K., Brashier, N. M., Payne, B. K., & Marsh, E. J. (2015). Knowledge does not protect 
+against illusory truth. Journal of Experimental Psychology: General, 144(5), 993.
+
+Fogg, B. J. (2003). Prominence-interpretation theory: Explaining how people assess credibility 
+online. In CHI'03 extended abstracts on human factors in computing systems (pp. 722-723).
+
+Geschke, D., Lorenz, J., & Holtz, P. (2019). The triple‐filter bubble: Using agent‐based modelling 
+to test a meta‐theoretical framework for the emergence 
+of filter bubbles and echo chambers. British Journal of Social Psychology, 58(1), 129-149.
+
+High, A. C., & Caplan, S. E. (2009). Social anxiety and computer-mediated communication 
+during initial interactions: Implications for the hyperpersonal perspective. 
+Computers in Human Behavior, 25(2), 475-482.
+
+---
+
+## References
+
+John, N. A., & Dvir-Gvirsman, S. (2015). “I Don't Like You Any More”: Facebook Unfriending 
+by Israelis During the Israel–Gaza Conflict of 2014. Journal of Communication, 65(6), 953-974.
+
+Nickerson, R. S. (1998). Confirmation bias: A ubiquitous phenomenon in many guises. Review of general psychology, 2(2), 175-220.
+
+Pariser, E. (2011). The filter bubble: How the new personalized web is changing what we read and how we think. Penguin.
+
+Petty, R. E., & Cacioppo, J. T. (1986). The elaboration likelihood model of persuasion. In Communication and 
+persuasion (pp. 1-24). Springer, New York, NY.
+
+Van Mierlo, T. (2014). The 1% rule in four digital health social networks: 
+an observational study. Journal of medical Internet research, 16(2), e33.
+
+Vosoughi, S., Roy, D., & Aral, S. (2018). The spread of true and false news online. Science, 359(6380), 1146-1151.
 
 ???
 
