--- a/a1.md
+++ b/a1.md
@@ -35,7 +35,7 @@ knit: (function(inputFile, encoding) {
 
 ## What are we going to do?
 
-### Day 1
+#### Day 1
 
 A1 Communication and society as a System?
 
@@ -45,7 +45,7 @@ A3 Obstacles and rhetoric foundations in communication
 
 A4 Transfer: How to build a digital network (fast)
 
-### Day 2
+#### Day 2
 
 B1 Design and Implementation I
 
@@ -55,7 +55,11 @@ B3 Design and Implementation II
 
 B4 Wrapping up - Next Steps
 
-### Follow-Up Meeting
+---
+
+## What are we going to do?
+
+#### Follow-Up Meeting
 
 Individual exercises
 
@@ -79,16 +83,17 @@ Creating a digital network for new means of communication
 breakout-rooms
 
 ---
+class: inverse, center
 
-# An Introduction to (the Sociology) of Systemic Thinking and Ideology
+# Part 1: Subject Matter of this Seminar and Introduction and Ideology
 
 ---
 
-## Part 1: What is Systemic Thinking?
+## What is Systemic Thinking?
 
 * Loose collection of interdisciplinary study fields, ca. 1950
 
-* Some thinkers, such as Niklas Luhman, established their own, 
+* Some thinkers, such as Niklas Luhmann, established their own, 
 specific theories of systems, i.e., of society as a set of systems
 	* Our next slide presents examples of this
 
@@ -151,6 +156,7 @@ economics, simulations, ...
 
 
 * Chaos theory
+	
 	* Linear elements can cause non-linear outcomes in a deterministic fashion
 
 --
@@ -169,19 +175,7 @@ economics, simulations, ...
 
 ---
 
-## Part 2: Society and the World as a System
-
-abc
-
----
-
-## Part 3: On the Topic of Ideology
-
-abc
-
----
-
-## Questions and Group Reflection (10 minutes)
+## Elaborative Questions
 
 Questions to reflect:
 
@@ -192,7 +186,248 @@ Questions to reflect:
 * Is society actually a system?
 	* What are limitations of this conceptualization?
 
-* What is ideology (not)?
+---
+class: center, inverse
+
+# Part 2: On the Topic of Ideology
+
+---
+
+## Ideology
+
+This input is designed to give participants an introduction into the theme of ideology. In line with some perspectives from the social sciences and philosophy, we shift our view from the negative connotation of the term to make it accessible as a working tool for our inquiry. This access allows us to consider (conflict-) dynamics in society and its various participants.
+
+Ultimately, becoming aware of ideological presuppositions - your own and that of partners in discussion - is a precondition for more effective communication!
+
+---
+
+## What do <u>you</u> know about ideology already?
+
+Take 5 mins to discuss in small groups.
+
+---
+
+## Your thoughts about Ideology
+
+---
+
+## What are the aims of this input?
+
+* **Understanding** that ideology is…
+	* Ubiquitous
+	* Necessary for society
+
+
+* **Learn** how to ...
+	* Theoretically access ideology
+
+
+* **Prepare** for…
+	* Practical implementation in concern of the pandemic
+
+---
+
+# Theoretical Input
+
+---
+
+## Ancient Origins of Ideology
+
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/An_Illustration_of_The_Allegory_of_the_Cave%2C_from_Plato%E2%80%99s_Republic.jpg" width="100%" alt="cave-allegory"&gt;
+
+---
+
+## Ancient Origins of Ideology
+
+* “Allegory of the Cave” by Platon (Sheehan: no year)
+
+* An allegory gives way to a hidden meaning
+
+* Here: people’s sense of reality is different and we are bound by perspective
+
+* Ideology as “an idea of the world” → distinct world view
+
+---
+
+## Overview
+
+* 1st part: Introduction
+
+* 2nd part: Theoretical input
+
+* 3rd part: Questions and discussion
+
+---
+
+## “Ideology”: a Dirty Word (Hawkes 2003)
+
+* Originally designed as the “science of ideas” → ἰδέα idéa (idea) and λόγος lógos (teaching)
+
+* Perceived as a threat under Napoleon → Since then “ideology” has often become a dirty word
+
+* Ideology is “false opinion” and nothing legitimate
+
+* Ideology can function as reasoning for totalitarianism
+
+* Examples: Nazism, Communism
+
+---
+
+## Ideology and Systems Thinking
+
+* We plead for a different understanding of ideology, in line with systems thinking!
+
+→ we as observers of society are not independent from it
+
+
+<br>
+* Introducing a twofold shift of view:
+	* “Ideology” as value-free term
+	* Ideologies as necessary for the functioning of society
+
+---
+
+## I. Ideology as a Value Free Term
+
+* We reject ideology as the embodiment of “false opinion”
+
+	* “Human thinking is not constituted freely in social space, but on the contrary is always rooted in a certain place in it” (Mannheim 1978: 73).
+
+* There is a variety of standpoints in society, each claiming a certain “truth”
+
+* Working with ideology necessitates to let off ultimate claims on objective truth
+
+---
+
+## I. Ideology as a Value Free Term
+
+* The content of an ideological standpoint might be “true”, yet thoroughly ideological
+
+* The content of a standpoint might be “false”, yet there is nothing ideological about it
+
+	* What matters is the claim to truth from which, in turn, a claim to power results
+	* **Truth is power!**
+	
+* Power defined as the ability to motivate someone to think or do something that he/she would not have otherwise (Forst 2015: 115)
+
+---
+
+## Two Quick Examples
+	
+* “Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
+	* → Ideology, actor claims to know the “truth”
+
+* “Corona is made up by Bill Gates”
+	* no appeal, intention unclear, (could be a joke) → no Ideology
+
+* Ideological substance depends on a subjects <mark>claim to power<mark>!
+
+* Conclusion: “We are within ideological space proper the moment [...] ‘true’ or ‘false’ is functional with regard to some relation of [...] ‘power’” (Zizek 2012: 8)	
+
+---
+
+## II. Why Ideologies are Necessary for Society
+
+* In systems thinking: ideologies function as orientation and justification for action (Luhmann 1991: 57)
+
+<br>
+* Ideologies are about “a view of good society”
+** Ideology externalizes your inner beliefs (“individual truths”)
+
+<br>
+* Even you as participants can be seen as ideologues!
+
+---
+
+## II. Why Ideologies are Necessary for Society
+
+* Different ideologies clash in society and are naturally inherent in politics
+
+* Discussions and conflicts about “the good society” help us to move forward
+
+* How do we analyze this? → suggesting ideology critique as a tool
+
+---
+
+## Ideology Critique: Who? (Zürn and de Wilde 2016)
+
+* Who are the subjects of the (ideological) conflict?
+
+* Social groups and different kinds of ideological expertise
+
+* Amateurs vs. ideological experts (leading speakers) and institutions (government, newspaper, societies)
+
+---
+
+## Ideology Critique: Who? (Zürn and de Wilde 2016)
+
+* The notion of (public) discourse gives a broader framework
+
+* Actors and institutions function within discourses
+	* Discourse in the broader sense (Habermas):
+
+* The negotiation process of claims of validity of different actors (Stanford Encyclopedia of Philosophy 2017)
+	* Ideologies partake here because societal conflicts are negotiated in discourse
+
+---
+
+## Ideology Critique: Who? (Zürn and de Wilde 2016)
+
+
+* We need to locate and identify key areas of conflict
+	
+	* → “bones of contestation” (Zürn & de Wilde 2016: 280)
+
+* For us especially important: what are areas/issues of contention in the pandemic? (Panel A2)
+
+* For “Critical Discourse Analysis”, we need empirical material:
+
+	* Newspapers, videos, podcasts, … what else?
+
+---
+
+## Our Takeaway
+
+* How do we escape a sheer amount of ideological standpoints?
+
+<br>
+
+> “Perhaps the higher task lies in learning to think relationally and dynamically, but not statically” (Mannheim 1978: 77).
+
+<br>
+
+<b>→ dynamic relationism</b>
+
+---
+class: inverse, center
+
+# Questions and Discussion
+
+---
+
+## References
+
+Forst, Rainer (2015): Noumenal Power. The Journal of Political Philosophy 23 (2): 111-127.
+
+Hawkes, David (2003): Ideology. London: Routledge.
+
+Mannheim, Karl (1978): Ideologie und Utopie. 6. Auflage. Schulte-Bulmke: Frankfurt am Main.
+
+Sheehan, Thomas (no year): Plato. The Allegory of the Cave. Rebublic VII 514 a, 2 to 517 a,7. https://web.stanford.edu/class/ihum40/cave.pdf.
+
+Simon, F. B. (2020). Einführung in Systemtheorie und Konstruktivismus (Introduction to Systems Theory and Constructivism). Carl-Auer Verlag.
+
+Luhmann, Niklas (1991): Soziologische Aufklärung 1. Aufsätze zur Theorie sozialer Systeme. Opladen: Westdeutscher Verlag.
+
+Stanford Encyclopedia of Philosophy (2017): Habermas's Discourse Theory. https://plato.stanford.edu/entries/habermas/#HabDisThe
+
+---
+
+## References
+
+Zizek, Slavoj (2012): Mapping Ideology. London: Verso.
+
+Zürn, Michael and Peter de Wilde (2016): Debating Globalization: Cosmopolitanism and Communitarianism as Political Ideologies. Journal of Political Ideologies 21 (3): 280-301.
 
 ---
 
