couple of details

--- a/a3.md
+++ b/a3.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-07-24
-title: Obstacles and rhetoric foundations in communication
+title: Challenges and Solutions for Effective Communication
 subtitle: Common Ground despite Controversy Creating a Digital Network
 author: CB SN JK
 output:
