--- a/b2.md
+++ b/b2.md
@@ -1,8 +1,8 @@
 ---
-date: 2021-01-01
-title: Seminar Session
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+date: 2021-07-25
+title: B2 A Common Set of Rules?
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -14,19 +14,38 @@ knit: (function(inputFile, encoding) {
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
-
 ## Outline
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+* Current practices and paradigms of content moderation online
+
+* Interactive discussion
+
+* Prototyping
+
+---
+class: inverse, center
+
+# Part 1: Current Practices and Paradigms of Content Moderation Online
+
+---
+
+## CM elicits ongoing discussions
+
+<img src="https://civis.cborchers.com/img/trump-twitter.png" width="100%" alt="trump-twitter">
+
+---
+
+## CM elicits ongoing discussions
+
+<img src="https://civis.cborchers.com/img/aoc-twitter.png" width="100%" alt="aoc-twitter">
+
+---
+
+## CM elicits ongoing discussions
+
+<img src="https://civis.cborchers.com/img/jh-twitter.png" width="100%" alt="jh-twitter">
 
 ---
 
 ## References
-
-* reference
-
-???
-
-presenter comment
 
