--- a/b2.md
+++ b/b2.md
@@ -10,7 +10,7 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/html/")
   })
 ---
 
