--- a/b2.md
+++ b/b2.md
@@ -47,5 +47,29 @@ class: inverse, center
 
 ---
 
-## References
+## Relevant dimensions
 
+* Platform and community guidelines
+
+  * The removal of spam, scam, hate and Google's "transparency report"
+  
+--
+
+* National and supranational law
+  * Germany's NetzDG and the accessibility of complaints
+  * EU's General Data Protection Regulation (GDPR) and the "right to be forgotten" (Viktor Mayer-Schönberger)
+  
+--
+
+* User reporting, account valuation, and power
+  * YouTube strikes and appealing to human content moderators
+  * Account bans and speculations on silicon valley's political stance
+  
+---
+
+## CM: Is it a spectrum?
+
+* How would a platform with the *least possible amount* of content moderation look like?
+
+* How would a platform with the *greatest possible amount* of content moderation look like?
+  * Would CM be purely algorithmic?
