--- a/a1.md
+++ b/a1.md
@@ -83,6 +83,20 @@ Creating a digital network for new means of communication
 breakout-rooms
 
 ---
+
+## Learning Goals of this Panel
+
+*This panel will introduce you to the subject matter of this seminar - systems thinking and its implications for society. We will learn about the concept of “ideology” and its functioning in the social realm as a basis from which we start our inquiry.*
+
+<br>
+
+* Getting an idea of systems thinking and its lens on society
+
+* Understanding what role “ideology” plays in society 
+
+* Preparing to use this lens on the pandemic and beyond 
+
+---
 class: inverse, center
 
 # Part 1: Subject Matter of this Seminar and Introduction to Ideology
