--- a/a2.md
+++ b/a2.md
@@ -1,8 +1,8 @@
 ---
-date: 2021-01-01
-title: Seminar Session
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+date: 2021-07-24
+title: A2 (Our) Perspectives on the pandemic - with Anna Wanka (Goethe University Frankfurt)
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -10,23 +10,53 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
+## Learning Goals of this Panel
 
-## Outline
+*Having learned about different positions in society from a theoretical perspective, we now want to transfer this onto the Covid-19-pandemic. We receive scientific input and also incorporate our own perspectives.*
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+<br>
+
+* Applying the learned to the pandemic by using personal and scientific perspectives
+ 
+* Participants introduce themselves and get to know each other more thoroughly
+
+* Establishing a positive working atmosphere 
 
 ---
 
-## References
+## Perspectives on the Pandemic
 
-* reference
+**Speed Dating + Breakout Rooms + Answergarden**
 
-???
+* What is your experience with the pandemic?
 
-presenter comment
+* What is no one talking about in the pandemic that nonetheless we should?
 
+* What perspectives are you frequently confronted with?
+
+---
+class: inverse, center
+
+# Welcome Anna Wanka!
+
+---
+class: inverse, center
+
+# Questions and Discussion
+
+---
+
+## Identifying Key Actors and Perspectives
+
+**Breakout Rooms**
+
+* *Try to apply what we discussed in A1*
+
+---
+class: inverse, center
+
+# Sharing Thoughts, Asking Questions
