--- a/a3.md
+++ b/a3.md
@@ -1,8 +1,8 @@
 ---
 date: 2021-07-24
-title: Challenges and Solutions for Effective Communication
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+title: A3 Challenges and Solutions for Effective Communication
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -14,12 +14,15 @@ knit: (function(inputFile, encoding) {
   })
 ---
 
-## Challenges and Solutions for Effective Communication 
+## Learning Goals of this Panel
 
+*Having integrated our perspective on society on the pandemic and after identifying conflicting actors in discourse, the upcoming panel will deal with communication theory. What is communication? What are obstacles to effective communication and what are possible solutions?*
 
-Having observed in A2 how communication can be ineffective, this input is designed to give participants a short introduction into the challenges and solutions for effective communication. 
+<br>
 
-By giving insight into the opposing views of systemic thinking and individual strategic communication we identify challenges in effective communication and propose building on the argumentation theory of Pragma-Dialectics a set of rules to implement in our upcoming discussions. 
+* Participants learn about communication and its obstacles and can apply this to personal situations
+
+* Participants get introduced into the idea of “Pragma-Dialectics” as a possible solution to communication dilemmas
 
 ---
 
