--- a/a4.md
+++ b/a4.md
@@ -1,8 +1,8 @@
 ---
-date: 2021-01-01
-title: Seminar Session
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+date: 2021-07-24
+title: A4 How to build a digital network (fast)
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -10,23 +10,86 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
+## Summing Up Day 1
 
-## Outline
+**Breakout Rooms**
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+* What were the main insights you took from day 1?
+
+* Are there open questions?
+
+* What change can you make with the information you learned?
 
 ---
 
-## References
+## Learning Goals of this Panel
 
-* reference
+*Bringing together the different sections of the day, we take a step back and sum up what we learned so far. Bridging into the second day, we start thinking about practical application. How can we create a digital community that incorporates effective communication of different actors?* 
 
-???
+<br>
 
-presenter comment
+* Participants gain an overview of the first day
 
+* A systematic transition from theory to practice is initiated
+
+---
+
+## The Proposition
+
+...
+
+---
+class: inverse, center
+
+# An Introduction to Conceptboard
+
+---
+
+## The Challenges
+
+* What aspects does one have to keep in mind when designing a digital network?
+
+<br>
+
+* What could potentially go wrong (pre-mortem technique)?
+
+<br>
+
+* Where could communication be counter-productive?
+
+---
+
+## The Integration
+
+* What things could we implement based on what we learned today? 
+
+<br>
+
+* What could you contribute to the design of the platform?
+
+<br>
+
+* What other things would we need to keep in mind to make the platform successful?
+
+---
+
+## The Value
+
+* What is the value proposition of the platform? 
+
+<br>
+
+* What makes the platform different from others? 
+
+<br>
+
+* What are the guiding values and principles of the platform?
+
+---
+class: inverse, center
+
+# Feedback, Sharing Thoughts, Asking Questions
