--- a/b1.md
+++ b/b1.md
@@ -1,8 +1,8 @@
 ---
 date: 2021-07-25
 title: B1 Design and Implementation I
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -10,7 +10,7 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
@@ -38,7 +38,7 @@ A1 Communication and society as a System?
 
 A2 (Our) Perspectives on the pandemic - with Anna Wanka (Goethe University Frankfurt)
 
-A3 Obstacles and rhetoric foundations in communication
+A3 Challenges and Solutions for Effective Communication
 
 A4 Transfer: How to build a digital network (fast)
 
@@ -56,7 +56,21 @@ A4 Transfer: How to build a digital network (fast)
 
 ### Kicking Off Our Design Process
 
-abc
+* Design Implications
+
+* Prototyping
+
+---
+
+## Learning Goals of this Panel
+
+*To start off our second day, we aim at addressing digital media and information processing in the WWW. We discuss how an innovative platform can be designed and start working on different prototypes.*
+
+<br>
+
+* Participants learn about commonalities and  differences in online communication
+
+* First possible designs of the platform are sketched out
 
 ---
 
@@ -81,6 +95,7 @@ abc
 ## Digital Communication in Networks
 
 * Asynchronicity and Hyperpersonalization
+
 	* Hyperpersonal model of communication and effects on social anxiety 
 	(High & Caplan, 2009)
 
@@ -103,6 +118,7 @@ abc
 ## Additional Findings from Empirical Research
 
 * Elaboration likelihood model (Petty & Cacioppo, 1986)
+
 	* There are prerequisites to elaboration
 
 --
@@ -120,6 +136,7 @@ abc
 ## Additional Findings from Empirical Research
 
 * Prominence-Interpretation Theory (Fogg, 2003):
+
 	* A close investigation of the source does not come naturally
 --
 
@@ -130,23 +147,32 @@ abc
 
 ---
 
-## Questions and Group Reflection
+## Design Implications
 
-Questions to reflect:
+**Group Discussion**
+
+* Which design consequences arise for a platform aiming at consensual communication?
+
+<br>
+
+*Potential Questions to Reflect:*
 
 * How does information flow differently online than offline?
 
 * What are differences in the way people interact online and offline?
 
-* Which consequences arise?
-
-* How would we like to address these consequences?
-
 ---
 
-## Design and Implementation
+## Prototyping
 
-abc
+**Breakout Rooms + Conceptboard**
+
+* Focus on 1-2 design ideas and create a visual prototype, including a short pitch
+
+---
+class: inverse, center
+
+# Group Sharing, Questions, Discussion
 
 ---
 
