--- a/b2.md
+++ b/b2.md
@@ -10,7 +10,7 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/html/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
@@ -21,6 +21,20 @@ knit: (function(inputFile, encoding) {
 * Interactive discussion
 
 * Prototyping
+
+---
+
+## Learning Goals of this Panel
+
+*We continue in learning about modes of content moderation of different big tech companies and jointly work on possible modes of content moderation for our own platform.*
+
+<br>
+
+* Learning about content moderation and its common modes on the WWW
+
+* Exploring possible rules of content moderation for the proposed platform
+
+* Finalizing a coherent stream of argument in favor of our favored mode of content moderation
 
 ---
 class: inverse, center
@@ -67,9 +81,49 @@ class: inverse, center
   
 ---
 
+## CM: A Community-Based Approach?
+
+...
+
+---
+
 ## CM: Is it a spectrum?
 
 * How would a platform with the *least possible amount* of content moderation look like?
 
 * How would a platform with the *greatest possible amount* of content moderation look like?
   * Would CM be purely algorithmic?
+  
+---
+
+## Inquiry
+
+**Breakout Rooms**
+
+* Collect 2-3 arguments for either centralized or democratic content moderation
+
+Alternatively:
+
+* What types of platforms and rules might be most conducive to sharing new perspectives? 
+
+<br>
+
+* Have one person present your results later
+
+---
+class: inverse, center
+
+# Group Sharing, Discussion  
+
+---
+
+## Prototyping
+
+**Breakout Rooms + Conceptboard**
+
+* Craft 1-2 community rules, values, or a technical implementation for content moderation of our platform
+  
+---
+class: inverse, center
+
+# Group Sharing, Questions, Discussion
