--- a/b4.md
+++ b/b4.md
@@ -1,8 +1,8 @@
 ---
-date: 2021-01-01
-title: Seminar Session
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+date: 2021-07-25
+title: B4 Wrapping Up - Next Steps
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -10,23 +10,90 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
+## This Session
 
-## Outline
+* Revisiting our prototype
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+* A fun quiz
+
+* Assigning tasks until the follow-up meeting
+
+* Feedback and wrapping up
 
 ---
 
-## References
+## Learning Goals of this Panel
 
-* reference
+*In this last panel, participants get an idea of what areas they could possibly work on in the future to enrich the platform and the network. We also reflect on our two-day seminar and gather feedback.*
 
-???
+<br>
 
-presenter comment
+* Outlining future perspectives and goals to work on in the next week and beyond
+
+* Reflecting on our two-day seminar 
+
+---
+
+## Revisiting our Prototype
+
+**Open Breakout Rooms + Conceptboard**
+
+* Are there any open questions and inconsistencies in our prototype?
+
+* Can you identify underdeveloped aspects of the prototypes (e.g., design, functionality)?
+
+* Would you like to change anything (e.g., language)?
+
+---
+class: inverse, center
+
+# A Fun Quiz
+
+---
+
+## Tasks Until the Follow-Up Meeting
+
+**Breakout Rooms, 2 Iterations**
+
+While there might be other areas to work in, we offer breakout rooms for the following areas:
+
+**Block 1**
+
+* privacy
+
+* usability
+
+* moderation
+
+**Block 2**
+
+* design
+
+* language
+
+* marketing
+
+---
+
+## Feedback and Wrapping Up
+
+**Mentimeter**
+
+<br>
+
+### Addendum
+
+* Workshop results and handouts will be send via e-mail
+
+* Course material is available through civis.cborchers.com
+
+* We plan on establishing a communication channel (e.g., Discord server)
+
+<br>
+
+*Thank you! See you in a week.*
 
