--- a/b3.md
+++ b/b3.md
@@ -1,8 +1,8 @@
 ---
-date: 2021-01-01
-title: Seminar Session
-subtitle: Common Ground despite Controversy Creating a Digital Network
-author: CB SN JK
+date: 2021-07-25
+title: B3 Design and Implementation II
+subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
+author: C. Borchers, S. Noske, J. Kießling
 output:
   xaringan::moon_reader:
     css: ["tamu"]
@@ -10,23 +10,73 @@ output:
       highlightLines: true
       countdown: 1
 knit: (function(inputFile, encoding) {
-    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./docs/")
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "./static/html/")
   })
 ---
 
-background-image: url(https://images.unsplash.com/photo-1516714819001-8ee7a13b71d7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80)
+## This Session
 
-## Outline
+* About service learning and the CIVIS values
 
-.footnote[unsplash.com/photos/qmnpqDwla_E]
+* Prototyping
+
+* Group discussion
+
+* Prototype merging
 
 ---
 
-## References
+## Learning Goals of this Panel
 
-* reference
+*After introducing the idea of service learning, participants design final prototypes of a platform of consensual communication. In the plenum, we try to merge these prototypes into one final product.*
 
-???
+<br>
 
-presenter comment
+* Integrating the idea of Service learning into our project
 
+* Finalizing one coherent version of the online platform 
+
+---
+
+## Service Learning and the CIVIS Values
+
+...
+
+---
+
+## Prototyping
+
+**Breakout Rooms + Conceptboard**
+
+* Design a visual platform prototype
+
+* Back the prototype with the theoretical and applied knowledge discussed thus far
+
+Potential questions to reflect:
+
+* Why should people use the platform?
+
+* What functionality would you, as a potential user, like the platform to have?
+
+* How can language and design embody community values?
+
+* How might artificial intelligence enhance the platform?
+
+---
+class: inverse, center
+
+# Prototype Sharing
+
+---
+
+## Discussion
+
+**Fishbowl**
+
+Topic: ...
+
+---
+
+## Prototype Merging
+
+**Conceptboard**
