--- a/a3.md
+++ b/a3.md
@@ -39,7 +39,7 @@ knit: (function(inputFile, encoding) {
 
 * We are all part of interconnected systems, but still individuals with particular opinions
 
-* Convincing another discutant of the correctness of a standpoint is part of the process of forming consensus
+* Convincing another discussant of the correctness of a standpoint is part of the process of forming consensus
 
 * Rhetorical action: a thin line between manipulation and persuasion
 
