--- a/a3.md
+++ b/a3.md
@@ -24,6 +24,20 @@ knit: (function(inputFile, encoding) {
 
 * Participants get introduced into the idea of “Pragma-Dialectics” as a possible solution to communication dilemmas
 
+???
+
+Introduction
+-	Communication from Latin “communi - care” = sharing, informing, taking part, doing together – “mutual understanding through signs and language”
+
+-	We focus on verbal language/written language (there are of course other sign modes)
+
+-	We will not treat the phenomenon how communication functions in detail; Luhmann: “communication is unlikely”, rather how we can communicate to be understood properly -> what are the obstacles?
+
+-	By “effective” we mean communication in the sense of “leading to action that is in the interest of each participant”
+
+SELF-LEARNING-SESSION
+-	we recommend to watch the first video for a little attunement and have a short look at the other links 
+
 ---
 
 ## Structure of This Input
@@ -48,6 +62,27 @@ knit: (function(inputFile, encoding) {
 > must be excluded from real rhetoric, which is by definition always tied to
 > socially acceptable means.” (Knape 2013: 6)
 
+???
+
+1st Input: Systems view vs. orator view
+-	Opposing views: collective system (assuming that its parts should work together like the parts in our body cells, shouldn’t they?) vs. the individual person (individual standpoints and individual interests)
+-	(as we can observe) the individual interest does very often not match what would be best for the overall system (society)
+-	For example climate change: Although it would probably best for everyone to reduce air pollution, it is hard to find consensus on that -> communication problem
+-	How can that fit together?... No clear answers in the sciences so far…
+
+-	But we might put it this way:
+-	Despite all differences we can form consensus through communication
+-	How: Through argumentation we can convince another person of the correctness of a certain standpoint (or a solution for a common problem that is acceptable for everyone; a solution that is in interest of the whole system; goal: approval)
+
+-	Convincing Argumentation contains the skilful use of rhetoric, because in questions of values there is no clear “truth”
+-	What is rhetoric?
+-	Ancient art of “talking good”
+Aristotle: “Rhetoric is the ability in any particular case to see the available means of persuasion.” (to identify what is convincing)
+
+-	But rhetoric is morally controversial -> (quote) a thin line between “manipulation” (talk someone into something through hidden strategy) and “persuasion” (convincing through good and rational presentation of arguments)
+-	“Socially acceptable means” -> respecting the rules and standards of society 
+
+
 ---
 
 ## Who is an Orator? (Lat.: “speaker”) 
@@ -56,11 +91,21 @@ knit: (function(inputFile, encoding) {
 
 * In our discussions each of you is to be considered an Orator!
 
+???
+
+-	Orators are not necessarily sole persons, but also institutions or other organizations that represent a certain standpoint
+
 ---
 
 ## What do <u>you</u> as an orator perceive as obstacles in communication?
 
 Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well as personal experiences.
+
+???
+
+-	we stay on the side of the individual now
+-	think of problems seen in the self-learning-session or you had when arguing with other people 
+-	choose someone in the group to write down the results
 
 
 ---
@@ -72,6 +117,10 @@ Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well
 * Hostile audience that distracts from the communicative purpose
 
 * Recent events that might let the topic appear inappropriate 
+
+???
+
+-	Situative resistance: Attacks on the person of the orator regardless of the topic making him nervous; arguing for atomic energy right after a nuclear accident
 
 
 ---
@@ -86,6 +135,10 @@ Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well
 
 * Absence of face-to-face communication; communication online (in case of an online-forum)
 
+???
+
+-	Medial resistance: Bad connection in a phone call; loss of internet connection while discussing over WhatsApp; someone passing on something you said, but not in your exact wording (the other person as medium, “Chinese whispers” – silent post, one of the examples of the attunement)
+
 ---
 
 
@@ -99,6 +152,10 @@ Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well
 * Orator is bound to: 
   * The grammatical structure of a language
   * Socio-cultural norms of addressees 
+ 
+???
+
+-	Linguistic/textual resistance: Not speaking another language (well), structure of the orators text has to make clear what he wants (to achieve), norms: not using the polite form of address when it is expected 
 
 ---
 
@@ -112,6 +169,10 @@ Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well
 
 * Differences in behavior and mentality (e.g. emotions) can distort communication  
 
+???
+
+-	Cognitive resistance: Projective calculation: Orator has to build on existing knowledge of audience; Audience not capable of certain technical terms; Audience disturbed by certain statement of the orator (I don’t like cats – in a cat loving audience) leads to emotional rejection of following arguments
+
 ---
 
 ## Obstacles for a Successful Orator
@@ -124,6 +185,10 @@ Take 5 mins to discuss in small groups. Consider our brainstorming in A2 as well
  
 How can two different ideologies prove the accuracy of their own judgements and the falseness of the others by argument? → Ineffective communication is to be expected.
 
+???
+
+-	On ideology: Think of the input in A1: Ideology is underlying all communication (even all human thought); different pictures or ideas of “good” and “bad” and different versions of “truth” appear in different ideologies: in short: different values lead to different assumptions in discussions: extreme examples: imagine discussing with a conservative catholic priest about homosexuality or with a young environmental activist about formula 1 -> Quote -> simply: they cannot
+
 ---
 
 ## Agreeing on a Common Ground 
@@ -133,6 +198,13 @@ How can two different ideologies prove the accuracy of their own judgements and 
 * We may not agree on a distinct truth as starting point, but we can agree on a way of mutual “truth”-finding → embrace different standpoints and one’s own particularity
 
 * Need for a “common ground” in discussion that allows proper argumentation
+
+???
+
+Agreeing on a common ground
+-	Dynamic relationism (Mannheim): Not taking your own view as absolute; hear all opinions before judging
+-	Mutual “truth-finding” -> agree on a certain procedure for having a discussion
+-	Need of a common starting point to have the chance of reaching an agreement on any topic
 
 ---
 
@@ -152,7 +224,18 @@ How can two different ideologies prove the accuracy of their own judgements and 
 a reasonable critic of the acceptability of a standpoint by putting forward a 
 constellation of propositions justifying or refuting the proposition expressed 
 in the standpoint” (van Eemeren and Grootendorst 2004: 1).
- 
+
+???
+
+Pragma-Dialectics
+-	Pragma: (ancient Greek) action, matter -> bound to the needs of the specific situation
+-	Dialectic: (normally) 2-sided way of dispute to find a common truth
+-	Van Eemeren & Grootendorst (RIP 2000): Communication scientists from the Netherlands  
+-	Agreement on procedure of truth-finding: Rules for Critical Discussion
+-	Aim to create ideal conditions to discuss, not a model to analyse how discussions happen in everyday life
+-	Argumentation: verbal = language (discussions in sciences if argumentation can happen solely visual), social = with other people, rational = reasonable evaluating; find reasons (propostions = sentences) for and against a certain standpoint
+
+
 ---
 
 ## Rules for a Critical Discussion
@@ -161,6 +244,10 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
 * Based on the pragma-dialectical approach (van Eemeren and Grootendorst 2004: 135-157) we propose 6 Rules for our upcoming discussions
 
+???
+
+Rules for a critical discussion
+-	Originally 10 rules that were expanded to 15 -> we picked 6 exemplary rules
 
 ---
 
@@ -174,6 +261,13 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
   * Who puts forward a standpoint is committed to defend it
 
+???
+
+Freedom of speech: feel free to state your opinion! Our aim is to create a space where no one has to fear antipathy just for a deviant opinion (as long as it is not insulting)
+
+Burden of proof: But: If you state your opinion you have the obligation to defend it
+
+
 ---
 
 ## Rules for Critical Discussion
@@ -185,6 +279,13 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 * Topic relatedness
 
   * A standpoint has to be defended only by proper argumentation (e.g. not by appeal to authority) 
+
+???
+
+Commitment to reference: Popular rhetorical strategy: straw man argument: intentionally misinterpreting the others argument or simplifying it to be able to attack it better
+
+Topic relatedness: Popular rhetorical strategy: appeal to authority: its true because the Dalai Lama said it…or distraction from the original argument by opening another topic
+
 
 ---
 
@@ -198,9 +299,24 @@ in the standpoint” (van Eemeren and Grootendorst 2004: 1).
 
   * If the justification of a standpoint has occurred in line with the discussion rules the discutants have to accept the standpoint as justified
 
+???
+
+Usage of plausible argumentation schemes: if arguments of a discussant are just aiming to contradict those of the opponent, but are contradicting themselves in the end they are obviously not fitting together; what counts as a good argument is a topic for itself 
+
+Acceptance of the result: Of course we cannot expect that the other person is changing his or her opinion immediately, but if the arguments on one side are better than on the other, we should at least reflect our own opinion more critically
+
+
 ---
 class: center, inverse
 ## Questions and Discussion 
+
+???
+
+Difference between investigating communication dilemmas in System view and Orator view:
+Perspective!
+
+System theory: Not favouring a certain position, treatment of communication independent of values, just investigating how communication happens
+Orator theory: Position of the individual that wants to reach its goals, use of rhetorical strategy bound to social values, instruction how the individuals communication can be effective -> “a good (convincing) and good (morally good) orator is good for the system”
 
 ---
 
