--- a/a1.md
+++ b/a1.md
@@ -309,7 +309,7 @@ Take 5 mins to discuss in small groups.
 
 * There is a variety of standpoints in society, each claiming a certain “truth”
 
-* Working with ideology necessitates to let off ultimate claims on objective truth
+* Working with ideology necessitates a flexible mindset in order to dive into the minds of others
 
 ---
 
@@ -373,7 +373,7 @@ Take 5 mins to discuss in small groups.
 
 ---
 
-## Ideology Critique: Who? (Zürn and de Wilde 2016)
+## Ideology Critique: What? (Zürn and de Wilde 2016)
 
 * The notion of (public) discourse gives a broader framework
 
@@ -385,7 +385,7 @@ Take 5 mins to discuss in small groups.
 
 ---
 
-## Ideology Critique: Who? (Zürn and de Wilde 2016)
+## Ideology Critique: How? (Zürn and de Wilde 2016)
 
 
 * We need to locate and identify key areas of conflict
