add picture and jonas changes remotely

--- a/a1.md
+++ b/a1.md
@@ -361,6 +361,8 @@ Take 5 mins to discuss in small groups.
 
 * How do we analyze this? → suggesting ideology critique as a tool
 
+<img src="https://civis.cborchers.com/img/ideology.png" width="100%" alt="ideology-venn">
+
 ---
 
 ## Ideology Critique: Who? (Zürn and de Wilde 2016)
