rescale once more

--- a/a1.md
+++ b/a1.md
@@ -361,7 +361,7 @@ Take 5 mins to discuss in small groups.
 
 * How do we analyze this? → suggesting ideology critique as a tool
 
-<img src="https://civis.cborchers.com/img/ideology.png" width="75%" alt="ideology-venn">
+<img src="https://civis.cborchers.com/img/ideology.png" width="60%" alt="ideology-venn" class="center">
 
 ---
 
