--- a/a1.md
+++ b/a1.md
@@ -263,7 +263,7 @@ Take 5 mins to discuss in small groups.
 
 ## Ancient Origins of Ideology
 
-* “Allegory of the Cave” by Platon (Sheehan: no year)
+* “Allegory of the Cave” by Plato (Sheehan: no year)
 
 * An allegory gives way to a hidden meaning
 
@@ -319,8 +319,8 @@ Take 5 mins to discuss in small groups.
 
 * The content of a standpoint might be “false”, yet there is nothing ideological about it
 
-	* What matters is the claim to truth from which, in turn, a claim to power results
-	* **Truth is power!**
+→ What matters is the **claim to truth** from which, in turn, a **claim to power** results
+	
 	
 * Power defined as the ability to motivate someone to think or do something that he/she would not have otherwise (Forst 2015: 115)
 
@@ -328,15 +328,17 @@ Take 5 mins to discuss in small groups.
 
 ## Two Quick Examples
 	
-* “Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
-	* → Ideology, actor claims to know the “truth”
+“Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
+	* actor claims to know the “truth” and appeals to audience → Ideology
 
-* “Corona is made up by Bill Gates”
-	* no appeal, intention unclear, (could be a joke) → no Ideology
+“Corona is made up by Bill Gates”
+	* no appeal, intention unclear (could be a joke) → no Ideology
+	
 
-* Ideological substance depends on a subjects <mark>claim to power<mark>!
+* **Conclusion:** Ideological substance depends on a subjects <mark>claim to power<mark>!
 
-* Conclusion: “We are within ideological space proper the moment [...] ‘true’ or ‘false’ is functional with regard to some relation of [...] ‘power’” (Zizek 2012: 8)	
+	
+* “We are within ideological space proper the moment [...] ‘true’ or ‘false’ is functional with regard to some relation of [...] ‘power’” (Zizek 2012: 8)	
 
 ---
 
@@ -345,11 +347,12 @@ Take 5 mins to discuss in small groups.
 * In systems thinking: ideologies function as orientation and justification for action (Luhmann 1991: 57)
 
 <br>
-* Ideologies are about “a view of good society”
-** Ideology externalizes your inner beliefs (“individual truths”)
+*Ideologies are not only about how things are but also how they are supposed to be → “a view of good society”
+	
+*Ideology externalizes your inner beliefs (“individual truths”)
 
 <br>
-* Even you as participants can be seen as ideologues!
+* All of us can be seen as ideologues!
 
 ---
 
