--- a/a1.md
+++ b/a1.md
@@ -328,14 +328,14 @@ Take 5 mins to discuss in small groups.
 
 ## Two Quick Examples
 	
-“Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
-	* actor claims to know the “truth” and appeals to audience → Ideology
+* “Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
+	* actor claims to know the “truth” and appeals to audience &#8594; Ideology
 
-“Corona is made up by Bill Gates”
+* “Corona is made up by Bill Gates”
 	* no appeal, intention unclear (could be a joke) → no Ideology
 	
 
-* **Conclusion:** Ideological substance depends on a subjects <mark>claim to power<mark>!
+* **Conclusion:** Ideological substance depends on a subjects <mark>claim to power</mark>!
 
 	
 * “We are within ideological space proper the moment [...] ‘true’ or ‘false’ is functional with regard to some relation of [...] ‘power’” (Zizek 2012: 8)	
