--- a/a1.md
+++ b/a1.md
@@ -315,7 +315,7 @@ Take 5 mins to discuss in small groups.
 
 ## I. Ideology as a Value Free Term
 
-* The content of an ideological standpoint might be “true”, yet thoroughly ideological
+* The content of a standpoint might be “true”, yet thoroughly ideological
 
 * The content of a standpoint might be “false”, yet there is nothing ideological about it
 
@@ -328,7 +328,7 @@ Take 5 mins to discuss in small groups.
 
 ## Two Quick Examples
 	
-* “Corona is a made up by Bill Gates, <mark>we have to fight back</mark>!”
+* “Corona is made up by Bill Gates, <mark>we have to fight back</mark>!”
 	* actor claims to know the “truth” and appeals to audience &#8594; Ideology
 
 * “Corona is made up by Bill Gates”
@@ -407,7 +407,7 @@ Take 5 mins to discuss in small groups.
 
 ## Our Takeaway
 
-* How do we escape a sheer amount of ideological standpoints?
+* How do we make use of a sheer amount of ideological standpoints?
 
 <br>
 
