--- a/a2.md
+++ b/a2.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-07-24
-title: A2 (Our) Perspectives on the pandemic - with Anna Wanka (Goethe University Frankfurt)
+title: A2 (Our) Perspectives on the pandemic
 subtitle: Common Ground Despite Controversy <br> <i>Creating a Digital Network</i>
 author: C. Borchers, S. Noske, J. Kießling
 output:
@@ -37,11 +37,6 @@ knit: (function(inputFile, encoding) {
 * What is no one talking about in the pandemic that nonetheless we should?
 
 * What perspectives are you frequently confronted with?
-
----
-class: inverse, center
-
-# Welcome Anna Wanka!
 
 ---
 class: inverse, center
